[package]
edition = "2018"
# links = "wasmedge-tensorflow_c"
name = "wasmedge-sys"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]

[build-dependencies]
bindgen = {version = "0.59", default-features = false, features = ["runtime"]}
